# actix-web-examples

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  makefile
migrations/2022-03-09-025309_create_posts/: up.sql
src/: main.rs
src/blog/: blog_actor.rs  mod.rs  models.rs
src/db/: mod.rs
src/hello/: assets.rs  hello_name.rs  hello_world.rs  index.rs  mod.rs
src/try_state/: count.rs
static/: index.html
static/assets/: style.css
