[package]
name = "assorted"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
chrono = "0.4.19"
actix-files = "0.6.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
uuid = {version="0.8.2", features = ["v4"]}
diesel = {version = "1.4.8", features = ["postgres", "uuid", "r2d2"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
derive_more = "0.99.17"